--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@line/liff": "2.20.3",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,8 +18,8 @@
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "eslint": "^8.20.0",
-    "eslint-config-next": "^12.2.3",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3",
     "typescript": "4.7.4"
   }
 }
