--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "src",
+  "name": "sample_app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@line/liff": "2.20.3",
+    "@line/liff": "^2.20.3",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
